[package]
name = "solana-escrow"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "1.6.22"

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.7.8"
solana-sdk = "=1.7.8"
solana-validator = "=1.7.8"

[lib]
crate-type = ["cdylib", "lib"]
